# WWQuokkaSims

./: .gitignore  DEPENDENCY_NOTICE.txt  README.md  main.py  pyproject.toml
scripts/: plot_field_slices.py
scripts/diagnostic/: compare_datasets.py  inspect_dataset.py  plot_pdf.py  plot_profile.py  plot_slice.py  plot_spectra.py  plot_vi_comparison.py  plot_vi_evolution.py  quokka_fields.py  utils.py
scripts/diagnostics/: compare_datasets.py  inspect_dataset.py  plot_pdf.py  plot_profile.py  plot_slice.py  plot_spectra.py  plot_vi_comparison.py  plot_vi_evolution.py
src/ww_quokka_sims/: __init__.py
src/ww_quokka_sims/_diagnostic_scripts/: compare_datasets.py  compare_snapshots.py  inspect_dataset.py  inspect_snapshot.py  plot_pdfs.py  plot_profile.py  plot_profiles.py  plot_slice.py  plot_slices.py  plot_spectra.py  plot_vi_comparison.py  plot_vi_evolution.py
src/ww_quokka_sims/_script_tools/: cli.py  data_series.py  field_registry.py
src/ww_quokka_sims/sim_io/: __init__.py  _energy_fields.py  _read_fields.py  _snapshot_protocol.py  find_datasets.py  find_snapshots.py  load_dataset.py  load_snapshot.py  profile_models.py  read_plt_files.py
src/ww_quokka_sims/sim_io/_snapshot/: __init__.py  _derive_energy_fields.py  _derive_magnetic_fields.py  _derive_mhd_fields.py  _derive_velocity_fields.py  _energy_field_methods.py  _fields_protocol.py  _magnetic_field_methods.py  _magnetic_fields.py  _mhd_field_methods.py  _mhd_fields.py  _read_fields.py  _snapshot_protocol.py  _velocity_field_methods.py  _velocity_fields.py
