##
## === PACKAGE METADATA
##

[project]
name = "ww-quokka-sims"
version = "0.1.0"
description = "python utility library for working with quokka simulations"
readme = "README.md"
authors = [
  { name = "Neco Kriel", email = "necokriel@gmail.com" }
]
requires-python = ">=3.11"

## runtime dependencies (installed automatically with the package)
dependencies = [
  "imageio>=2.37.0",
  "numpy>=2.3.2",
  "yt>=4.4.1",
]

##
## === BUILD SYSTEM
##

## hatchling packages the source into a distributable wheel
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

## point hatchling to the importable source code
[tool.hatch.build]
sources = ["src"]

## explicit package path required: project name uses dashes (ww-quokka-sims) but
## the source directory uses underscores (ww_quokka_sims); hatchling cannot reliably
## auto-detect this mapping
[tool.hatch.build.targets.wheel]
packages = ["src/ww_quokka_sims"]

##
## === TYPE CHECKER (basedpyright)
##

## for full config reference: https://docs.basedpyright.com/v1.20.0/configuration/config-files/
[tool.pyright]

## which directories to lint under
include = [
    "src",
    "scripts",
]
## where to look when resolving imports
extraPaths = ["src"]

## --- rules to enforce
reportMissingImports = true    # error on unresolvable imports
reportMissingTypeStubs = false # suppress missing stub warnings for third-party packages (e.g. yt)
