##
## === PACKAGE METADATA
##

[project]
name = "ww-quokka-sims"
version = "0.1.0"
description = "python utility library for working with quokka simulations"
readme = "README.md"
authors = [
  { name = "Neco Kriel", email = "necokriel@gmail.com" }
]
requires-python = ">=3.11"

## runtime dependencies (installed automatically with the package)
dependencies = [
  "imageio>=2.37.0",
  "jormi",
  "numpy>=2.3.2",
  "yt>=4.4.1",
]

[tool.uv.sources]
jormi = { path = "../jormi", editable = true }

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pytest>=9.0.2",
]

##
## === BUILD SYSTEM
##

## hatchling packages the source into a distributable wheel
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

## point hatchling to the importable source code
[tool.hatch.build]
sources = ["src"]

## explicit package path required: project name uses dashes (ww-quokka-sims) but
## the source directory uses underscores (ww_quokka_sims); hatchling cannot reliably
## auto-detect this mapping
[tool.hatch.build.targets.wheel]
packages = ["src/ww_quokka_sims"]

##
## === TYPE CHECKER (basedpyright)
##

## for full config reference: https://docs.basedpyright.com/v1.20.0/configuration/config-files/
[tool.pyright]

## which directories to lint under
include = [
    "src",
    "scripts",
    "utests",
]
## where to look when resolving imports
extraPaths = ["src"]

## --- rules to enforce
reportMissingImports = true
reportMissingTypeStubs = false  # third-party packages rarely ship stubs

## --- rules to suppress
reportExplicitAny = "none"  # numpy/scipy code uses Any extensively; unavoidable
reportAny = "none"  # noisy cascade of the above
reportUnknownMemberType = "none"  # cascade from untyped third-party stubs
reportUnknownVariableType = "none"  # cascade from untyped third-party stubs
reportUnknownArgumentType = "none"  # cascade from untyped third-party stubs
reportImplicitStringConcatenation = "none"  # valid style for long error messages
reportImplicitOverride = "none"  # too verbose to require @override on every override
reportUnusedCallResult = "none"  # ensure_*/check_* are called for side effects
reportPrivateUsage = "none"  # tests legitimately access private members
reportUninitializedInstanceVariable = "none"  # false positive: pyright misses variables set in setUp()
enableTypeIgnoreComments = true  # honour "# type: ignore" (basedpyright defaults to false)
reportIgnoreCommentWithoutRule = "none"  # test files use bare "# type: ignore" intentionally
reportUnnecessaryTypeIgnoreComment = "none"  # suppress warnings about stale ignore comments
reportUnnecessaryIsInstance = "none"  # isinstance guards for runtime safety beyond what annotations enforce
reportUnreachable = "none"  # paired with the above: guards after exhaustive isinstance chains appear unreachable to pyright

##
## === TEST RUNNER (pytest)
##

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["utests"]
