##
## === PACKAGE METADATA
##

[project]
name = "ww-quokka-sims"
version = "0.1.0"
description = "python utility library for working with quokka simulations"
readme = "README.md"
authors = [
  { name = "Neco Kriel", email = "necokriel@gmail.com" }
]
requires-python = ">=3.11"

## runtime dependencies (installed automatically with the package)
dependencies = [
  "imageio>=2.37.0",
  "jormi",
  "numpy>=2.3.2",
  "yt>=4.4.1",
]

[tool.uv.sources]
jormi = { path = "../jormi", editable = true }

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pytest>=9.0.2",
]

##
## === BUILD SYSTEM
##

## hatchling packages the source into a distributable wheel
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

## point hatchling to the importable source code
[tool.hatch.build]
sources = ["src"]

## explicit package path required: project name uses dashes (ww-quokka-sims) but
## the source directory uses underscores (ww_quokka_sims); hatchling cannot reliably
## auto-detect this mapping
[tool.hatch.build.targets.wheel]
packages = ["src/ww_quokka_sims"]

##
## === TYPE CHECKER (basedpyright)
##

## for full config reference: https://docs.basedpyright.com/v1.20.0/configuration/config-files/
[tool.pyright]

## which directories to lint under
include = [
    "src",
    "scripts",
    "utests",
]
## where to look when resolving imports
extraPaths = ["src", "scripts/diagnostic"]

## --- rules to enforce
reportMissingImports = true
reportMissingTypeStubs = false  # third-party packages rarely ship stubs

## --- rules to suppress
reportUnknownVariableType = "none"  # cascade from yt returning Any; yt ships no stubs
reportUnknownMemberType = "none"  # cascade from yt returning Any; yt ships no stubs
reportAny = "none"  # cascade from yt returning Any; yt ships no stubs
reportExplicitAny = "none"  # yt dataset objects annotated as Any; no stubs available
reportUnusedCallResult = "none"  # validate_types.ensure_* called for side effects only
reportPrivateUsage = "none"  # _Mixin classes are private-to-public-API but cross-module by design
reportUnusedClass = "none"  # _Mixin and _Protocol classes are used as base classes / type hints across modules
reportMissingTypeArgument = "none"  # scripts use bare Callable and dict; fully typing field loaders is impractical
reportImplicitStringConcatenation = "none"  # multi-line f-string error messages are intentional
reportUnknownParameterType = "none"  # matplotlib axes params are untyped in stubs
reportMissingParameterType = "none"  # matplotlib axes params are untyped in stubs
reportUnknownArgumentType = "none"  # cascade from yt/matplotlib returning Any; no stubs available
reportUnusedFunction = "none"  # _annotate_fit is a helper retained for future use

##
## === TEST RUNNER (pytest)
##

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["utests"]
